test/asm/fragment-align-mismatch.asm
section fragment "aligned", wram0[$c002], align[1]
section fragment "aligned", wram0, align[2]
